--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -1,25 +1,24 @@
 <div class='profile'>
-  <div class='image'>&nbsp;</div>
-  <h2 class='name'>Google Client</h2>
-  <h3 class='profession'>Software Engineer</h3>
-  <p class='description'>
-    Showcase your work by featuring your best posts, documents, media, and websites. Add featured
-  </p>
+    <h2 class='name'>P. Soumith Reddy</h2>
+    <h3 class='profession'>Software Engineer</h3>
+    <p class='description'>
+        Showcase your work by featuring your best posts, documents, media,
+        and websites. Add featured
+    </p>
 </div>
 <div class='dashboard'>
-  <div class='personal-info'>
-    <h2>Personal Information</h2>
-    <h3 class='email'><span>Email ID: </span>mail.google.com</h3>
-    <h3 class='address'>
-      <span>Address: </span>
-      Showcase your work by featuring your best posts, documents, media, and
-      websites. Add featured.
-    </h3>
-  </div>
-  <div class='education'>
-  </div>
-  <div class='experience'>
-  </div>
-  <div class='skills'>
-  </div>
+    <div class='personal-info'>
+        <h2>Personal Information</h2>
+        <h5 class='email'><span>Email ID: </span>mail.google.com</h5>
+        <h5 class='address'>
+            <span>Address: </span>
+            Showcase your work by featuring your best posts, documents, media, and
+            websites. Add featured.
+        </h5>
+    </div>
+    <app-education></app-education>
+    <div class='experience'>
+    </div>
+    <div class='skills'>
+    </div>
 </div>
