--- a/src/app/profile-page/profile-page.component.scss
+++ b/src/app/profile-page/profile-page.component.scss
@@ -1,29 +1,16 @@
 :host {
   display: block;
-  width: 60vw;
-  margin: 10vh 20vw;
+  width: 100vw;
 }
 
 .profile {
   display: block;
-  border: 2px solid grey;
-  border-radius: 6px;
   background-color: lightblue;
-  padding: 2em;
-
-  .image {
-    float: right;
-    right: 0;
-    width: 10em;
-    height: 10em;
-    border: solid 2px black;
-    background-color: gray;
-    border-radius: 50%;
-  }
+  padding: 20vh 20vw 2em;
 
   .name {
     font-weight: bold;
-    font-size: 2.5em;
+    font-size: 6em;
     margin-bottom: 0;
     padding-bottom: 0;
   }
@@ -31,37 +18,67 @@
   .profession {
     margin-top: .5em;
     font-size: 1.5em;
-    color: gray;
-    font-style: italic;
+    color: black;
+    font-weight: bold;
   }
 
   .description {
     margin: 1em 0;
     font-size: 1.2em;
     width: 30vw;
+    font-style: italic;
   }
 }
 
-
 .dashboard {
-  margin-top: 2em;
-  border: 1px solid lightgray;
-  border-radius: 6px;
-  background-color: beige;
-  padding: 2em;
+  width: 60vw;
+  margin: 2em 20vw;
 
   h2 {
-    font-size: 2em;
-    margin-bottom: 1.5em;
+    font-size: 2.4em;
+    margin-bottom: 1em;
     font-weight: bold;
   }
 
-  h3 {
+  h5 {
     font-size: 1.2em;
     font-weight: 400;
 
     span {
       font-weight: bold;
+    }
+  }
+
+  h3 {
+    font-size: 1.6em;
+    font-weight: 400;
+
+    span {
+      font-weight: bold;
+    }
+
+    .right {
+      float: right;
+      color: gray;
+      font-size: .8em;
+    }
+  }
+
+  .personal-info {
+    padding: 2em 0;
+    margin: 1em 0;
+  }
+
+  .education {
+    padding: 2em 0;
+    margin: 1em 0;
+
+    .inner {
+      margin: 1em 0;
+    }
+
+    .years {
+      color: grey;
     }
   }
 }
