--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-  font-family: "IBM Plex Sans";
+  font-family: "Inter", sans-serif;
+  letter-spacing: -.04em;
 }
