Profile page completed

--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -17,8 +17,8 @@
         </h5>
     </div>
     <app-education></app-education>
-    <div class='experience'>
-    </div>
+    <app-experience></app-experience>
+    <app-skills></app-skills>
     <div class='skills'>
     </div>
 </div>
