--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,5 +1,5 @@
-<div class='education category'>
-    <h2>Education Background
+<div class='experience category'>
+    <h2>Professional Experiences
         <span class="right">
             <button>
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
@@ -13,18 +13,18 @@
         </span>
 
     </h2>
-    <h4 *ngIf="education.length == 0">No Education details added!</h4>
-    <div class="inner" *ngFor="let education_mem of education; let last = last">
+    <h4 *ngIf="experiences.length == 0">No Experiences added!</h4>
+    <div class="inner" *ngFor="let experience of experiences; let last = last">
         <h3>
-            <span>{{education_mem.course}}</span>
+            <span>{{experience.role}}</span>
             <span class="right">
-          {{education_mem.duration}}</span>
+                {{experience.duration}}
+            </span>
         </h3>
-        <h4>{{education_mem.institution}}</h4>
+        <h4>{{experience.company}}</h4>
         <h4 class="years">
-            {{education_mem.startMonth}} - {{education_mem.endMonth}}
+            {{experience.startMonth}} - {{experience.endMonth}}
         </h4>
         <hr *ngIf="!last"/>
-
     </div>
 </div>
