--- a/src/app/profile-page/profile-page.component.scss
+++ b/src/app/profile-page/profile-page.component.scss
@@ -34,53 +34,11 @@
   width: 60vw;
   margin: 2em 20vw;
 
-  h2 {
-    font-size: 2.4em;
-    margin-bottom: 1em;
-    font-weight: bold;
-  }
-
-  h5 {
-    font-size: 1.2em;
-    font-weight: 400;
-
-    span {
-      font-weight: bold;
-    }
-  }
-
-  h3 {
-    font-size: 1.6em;
-    font-weight: 400;
-
-    span {
-      font-weight: bold;
-    }
-
-    .right {
-      float: right;
-      color: gray;
-      font-size: .8em;
-    }
-  }
-
   .personal-info {
-    padding: 2em 0;
-    margin: 1em 0;
+    padding: 1em 0;
+    margin: .5em 0;
   }
 
-  .education {
-    padding: 2em 0;
-    margin: 1em 0;
-
-    .inner {
-      margin: 1em 0;
-    }
-
-    .years {
-      color: grey;
-    }
-  }
 }
 
 
