--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,88 @@
   font-family: "Inter", sans-serif;
   letter-spacing: -.04em;
 }
+
+// Profile page styles
+
+.dashboard {
+  h2 {
+    font-size: 2em;
+    margin-bottom: 1em;
+    font-weight: bold;
+
+    .right {
+      float: right;
+      height: 1.4em;
+      width: 1.4em;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-content: center;
+
+      button {
+        border: none;
+        background-color: transparent;
+
+        &:focus {
+          outline: 0;
+        }
+      }
+
+      &:hover {
+        background-color: lightsteelblue;
+      }
+
+      svg {
+        width: .8em;
+        height: .8em;
+      }
+    }
+  }
+
+  h5 {
+    font-size: 1.2em;
+    font-weight: 400;
+
+    span {
+      font-weight: 600;
+    }
+  }
+
+  h4 {
+    font-size: 1.2em;
+    font-weight: 400;
+
+    span {
+      font-weight: 600;
+    }
+  }
+
+  h3 {
+    font-size: 1.4em;
+    font-weight: 400;
+
+    span {
+      font-weight: bold;
+    }
+
+    .right {
+      float: right;
+      color: gray;
+      font-size: .8em;
+    }
+  }
+
+  .category {
+    padding: 1em 0;
+    margin: .5em 0;
+
+    .inner {
+      margin: 1em 0;
+    }
+
+    .years {
+      color: grey;
+    }
+  }
+}
+
