--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -1,24 +1,23 @@
-<div class='profile'>
-    <h2 class='name'>P. Soumith Reddy</h2>
-    <h3 class='profession'>Software Engineer</h3>
-    <p class='description'>
-        Showcase your work by featuring your best posts, documents, media,
-        and websites. Add featured
+<div class="profile">
+    <h2 class="name">P. Soumith Reddy</h2>
+    <h3 class="profession">Software Engineer</h3>
+    <p class="description">
+        Showcase your work by featuring your best posts, documents, media, and
+        websites. Add featured
     </p>
 </div>
-<div class='dashboard'>
-    <div class='personal-info'>
+<div class="dashboard">
+    <div class="personal-info">
         <h2>Personal Information</h2>
-        <h5 class='email'><span>Email ID: </span>mail.google.com</h5>
-        <h5 class='address'>
+        <h5 class="email"><span>Email ID: </span>mail.google.com</h5>
+        <h5 class="address">
             <span>Address: </span>
-            Showcase your work by featuring your best posts, documents, media, and
-            websites. Add featured.
+            Showcase your work by featuring your best posts, documents, media,
+            and websites. Add featured.
         </h5>
     </div>
     <app-education></app-education>
     <app-experience></app-experience>
     <app-skills></app-skills>
-    <div class='skills'>
-    </div>
+    <div class="skills"></div>
 </div>
