--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,30 +1,35 @@
-<div class='education category'>
-    <h2>Education Background
+<div class="education category">
+    <h2>
+        Education Background
         <span class="right">
             <button>
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round"
-                          stroke-linejoin="round" stroke-width="2"
-                          d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z">
-                    </path>
+                <svg
+                    class="w-6 h-6"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
+                    ></path>
                 </svg>
             </button>
         </span>
-
     </h2>
     <h4 *ngIf="education.length == 0">No Education details added!</h4>
     <div class="inner" *ngFor="let education_mem of education; let last = last">
         <h3>
-            <span>{{education_mem.course}}</span>
-            <span class="right">
-          {{education_mem.duration}}</span>
+            <span>{{ education_mem.course }}</span>
+            <span class="right"> {{ education_mem.duration }}</span>
         </h3>
-        <h4>{{education_mem.institution}}</h4>
+        <h4>{{ education_mem.institution }}</h4>
         <h4 class="years">
-            {{education_mem.startMonth}} - {{education_mem.endMonth}}
+            {{ education_mem.startMonth }} - {{ education_mem.endMonth }}
         </h4>
-        <hr *ngIf="!last"/>
-
+        <hr *ngIf="!last" />
     </div>
 </div>
