Experience Service added

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -28,7 +28,7 @@
                 {{ experience.duration }}
             </span>
         </h3>
-        <h4>{{ experience.company }}</h4>
+        <h4>{{ experience.company.name }}</h4>
         <h4 class="years">
             {{ experience.startMonth }} - {{ experience.endMonth }}
         </h4>
