--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,37 +1,64 @@
+<script src="experience-inner/experience-inner.component.spec.ts"></script>
 <div class="experience category">
     <h2>
         Professional Experiences
         <span class="right">
-            <button>
-                <svg
-                    class="w-6 h-6"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg"
-                >
-                    <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
-                    ></path>
-                </svg>
-            </button>
+            <button (click)="switchCreate()">Add</button>
         </span>
     </h2>
     <h4 *ngIf="experiences.length == 0">No Experiences added!</h4>
     <div class="inner" *ngFor="let experience of experiences; let last = last">
-        <h3>
-            <span>{{ experience.role }}</span>
-            <span class="right">
-                {{ experience.duration }}
-            </span>
-        </h3>
-        <h4>{{ experience.company.name }}</h4>
-        <h4 class="years">
-            {{ experience.startMonth }} - {{ experience.endMonth }}
-        </h4>
+        <app-experience-inner [experience]="experience" (myEvent)="reload()"></app-experience-inner>
         <hr *ngIf="!last" />
+    </div>
+    <div class="inner">
+        <div *ngIf="create">
+            <form class="personal-info .col-sm-" [formGroup]="experienceEditForm" (ngSubmit)="submitForm()">
+                <div class="mb-3 row element">
+                    <label for="company" class="col-sm-4 col-form-label">Company:</label>
+                    <div class="col-sm-8">
+                        <input id="company" type="text" placeholder="Enter Company" formControlName="company">
+                    </div>
+                </div>
+                <div class="mb-3 row element">
+                    <label for="role" class="col-sm-4 col-form-label">Role:</label>
+                    <div class="col-sm-8">
+                        <input id="role" type="text" placeholder="Enter your Role" formControlName="role">
+                    </div>
+                </div>
+                <div class="mb-3 row element">
+                    <label for="startMonth" class="col-sm-4 col-form-label">Start Month:</label>
+                    <div class="col-sm-8">
+                        <input id="startMonth" type="email" placeholder="Enter Start Month" formControlName="startMonth">
+                    </div>
+                </div>
+                <div class="mb-3 row element">
+                    <label for="endMonth" class="col-sm-4 col-form-label">End Month:</label>
+                    <div class="col-sm-8">
+                        <input id="endMonth" type="text" placeholder="Enter End Month" formControlName="endMonth">
+                    </div>
+                </div>
+                <div class="mb-3 row element">
+                    <label for="duration" class="col-sm-4 col-form-label">Duration:</label>
+                    <div class="col-sm-8">
+                        <input id="duration" type="text" placeholder="Enter Duration" formControlName="duration">
+                    </div>
+                </div>
+                <div class="mb-3 row element">
+                    <label for="description" class="col-sm-4 col-form-label">Description:</label>
+                    <div class="col-sm-8">
+                        <input id="description" type="text" placeholder="Enter Description" formControlName="description">
+                    </div>
+                </div>
+                <div class="mb-3 row element">
+                    <label for="location" class="col-sm-4 col-form-label">Location:</label>
+                    <div class="col-sm-8">
+                        <input id="location" type="text" placeholder="Enter Location" formControlName="location">
+                    </div>
+                </div>
+                <button class="btn btn-success" type="submit" [disabled]="!experienceEditForm.valid">Create</button>
+                <button type="button" class="btn btn-secondary right" (click)="switchCreate()">Cancel</button>
+            </form>
+        </div>
     </div>
 </div>
