--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -1,6 +1,6 @@
 <script src="../experience.ts"></script>
 <div class="profile">
-    <h2 class="name">Update User</h2>
+    <h2 class="name">Register User</h2>
 </div>
 <div class="dashboard">
     <form class="personal-info .col-sm-" [formGroup]="userForm" (ngSubmit)="onSubmit()">
@@ -8,6 +8,12 @@
             <label for="username" class="col-sm-4 col-form-label">Username:</label>
             <div class="col-sm-8">
                 <input id="username" type="text" placeholder="Enter Username" formControlName="username">
+            </div>
+        </div>
+        <div class="mb-3 row element">
+            <label for="password" class="col-sm-4 col-form-label">Password:</label>
+            <div class="col-sm-8">
+                <input id="password" type="password" placeholder="Enter Password" formControlName="password">
             </div>
         </div>
         <div class="mb-3 row element">
@@ -40,8 +46,7 @@
                 <input id="address" type="text" placeholder="Enter Address" formControlName="address">
             </div>
         </div>
-        <button type="button" class="btn btn-success" type="submit" [disabled]="!userForm.valid">Update</button>
-        <button type="button" class="btn btn-secondary right" type="reset" (click)="reset()">Reset</button>
-        <button type="button" class="btn btn-primary right" (click)="cancel()">Cancel</button>
+        <button class="btn btn-success" type="submit" [disabled]="!userForm.valid">Register</button>
+        <button class="btn btn-secondary right" type="reset">Reset</button>
     </form>
 </div>
