--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,29 +14,18 @@
 
     .right {
       float: right;
-      height: 1.4em;
-      width: 1.4em;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-content: center;
+      color: gray;
+      font-size: .8em;
+      font-weight: bold;
 
-      button {
+      button{
+        width: 15%;
         border: none;
         background-color: transparent;
-
-        &:focus {
-          outline: 0;
+        color: lightskyblue;
+        &+.right{
+          margin-left: 10%;
         }
-      }
-
-      &:hover {
-        background-color: lightsteelblue;
-      }
-
-      svg {
-        width: .8em;
-        height: .8em;
       }
     }
   }
@@ -57,6 +46,13 @@
     span {
       font-weight: 600;
     }
+
+    .right {
+      float: right;
+      color: gray;
+      font-size: .8em;
+      font-weight: bold;
+    }
   }
 
   h3 {
@@ -69,9 +65,34 @@
 
     .right {
       float: right;
-      color: gray;
-      font-size: .8em;
+      height: 1.6em;
+      width: 1.6em;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-content: center;
+
+      button {
+        border: none;
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+
+        &:focus {
+          outline: 0;
+        }
+      }
+
+      &:hover {
+        background-color: lightsteelblue;
+      }
+
+      svg {
+        width: 1em;
+        height: 1em;
+      }
     }
+
   }
 
   .category {
