--- a/src/app/education/education-inner/education-inner.component.scss
+++ b/src/app/education/education-inner/education-inner.component.scss
@@ -21,6 +21,10 @@ form {
         border: none;
       }
 
+      &:focus{
+        color: blue;
+      }
+
       &::placeholder {
         color: lightgray;
       }
