--- a/src/app/profile-edit-page/profile-edit-page.component.scss
+++ b/src/app/profile-edit-page/profile-edit-page.component.scss
@@ -25,6 +25,10 @@ form {
         border: none;
       }
 
+      &:focus{
+        color: blue;
+      }
+
       &::placeholder {
         color: lightgray;
       }
