--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,9 @@
         &+.right{
           margin-left: 10%;
         }
+        &:active{
+          outline: none;
+        }
       }
     }
   }
